:wrench: :art: fixed Navbar collapsing issue and minor Navbar Component enhancement

--- a/HitayaApp/src/styles.scss
+++ b/HitayaApp/src/styles.scss
@@ -152,8 +152,8 @@ a {
   background-color: #ffffff;
   padding-top: 1px;
   padding-bottom: 0;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 0px;
+  padding-right: 0px;
   border-bottom: 1px solid #ebebeb;
   /*
 	-webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
